src/styles/_shell.scss
:global(.kaltura-player-container) {
  position: absolute !important;
  top: 0;
  background-color: #000;
}

.player {
  overflow: hidden;
  user-select: none;
  width: 100%;

  &:-webkit-full-screen {
    width: 100%;
    height: 100%;
    max-width: none;
  }
  * {
    box-sizing: border-box;
    outline: none;
  }
  ::selection {
    background-color: rgba(0, 0, 0, 0.1);
  }
  video {
    width: 100%;
  }
  .player-gui {
    opacity: 0;
    overflow: hidden;
    font-size: 0;
    font-family: $font-family;

    input, textarea {
      font-family: $font-family;
    }
  }
  :global(#overlay-portal) {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
  }
  &.overlay-active :global(#overlay-portal) {
    z-index: 11;
  }
  &.metadata-loaded .player-gui,
  &.state-paused .player-gui,
  &.overlay-active .player-gui,
  &.menu-active .player-gui {
    opacity: 1;
  }
}

.player.nav {
  .control-button,
  .seek-bar,
  .dropdown-button,
  .smart-container-item,
  .dropdown-menu-item,
  .pre-playback-play-button,
  .sample,
  .custom-captions-applied > a,
  .form-group-row > a,
  .button-save-cvaa,
  .slider,
  .live-tag {
    &:focus {
      outline: 1px solid #00cbff;
    }
  }
}

.player :global([id^=playkit-ads-container]) {
  z-index: 5;
  transition: transform 100ms;
}

.player:not(.ad-break).metadata-loaded {
  &.hover :global([id^=playkit-ads-container]),
  &.state-paused :global([id^=playkit-ads-container]) {
    transform: translateY(-60px);
  }
}

video {
  left: 0;

  &::-webkit-media-controls-panel-container,
  &::-webkit-media-controls {
    display: none !important;
    -webkit-appearance: none;
  }

  &::-webkit-media-controls-start-playback-button {
    display: none !important;
    -webkit-appearance: none;
  }

  &::-webkit-media-text-track-container {
    bottom: 0;
    height: 100% !important;
  }
}

